<resources>
    <string name="app_name" translatable="false">INWIPTV Beta</string>
    <string name="game_url" translatable="false">https://www.inwiptv.org/wheelnewapp.php</string>
    <string name="api_main" translatable="false">https://app.inwmanga.com/tv/</string>
    <string name="api_wss" translatable="false">wss://127.0.0.1:8080</string>
    <string name="alert_httpresponse">กรุณาเช็คอินเทอร์เน็ต</string>
    <string name="vipday">เหลือ %1$s วัน</string>
    <string name="vipday_en">Left %1$s days</string>
    <string name="title_activity_android_player">AndroidPlayer</string>
    <string name="next">ถัดไป</string>
    <string name="previous">ย้อนกลับ</string>
    <string name="bt_more">เกี่ยวกับเรา</string>
    <string name="bt_demo">ฟรีทีวี</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="txt_username">ชื่อผู้ใช้</string>
    <string name="txt_password">รหัสผ่าน</string>
    <string name="txt_remember_me">จดจำ</string>
    <string name="bt_login">เข้าสู่ระบบ</string>
    <string name="bt_login_about">เข้าสู่ระบบ / Login</string>
    <string name="bt_register">สมัครสมาชิก</string>
    <string name="bt_register2">สมัครสมาชิก</string>
    <string name="bt_register_about">สมัครสมาชิก / Register</string>
    <string name="txt_register_detail1">ภาษาอังกฤษและตัวเลขเท่านั้น</string>
    <string name="txt_accept_number">เบอร์โทรศัพท์</string>
    <string name="txt_register_detail2">เบอร์โทรศัพท์เพื่อรับรหัสยืนยัน</string>
    <string name="txt_register_detail3">ภาษาอังกฤษและตัวเลขเท่านั้น</string>
    <string name="txt_re_password">ยืนยันรหัสผ่าน</string>
    <string name="txt_register_detail4">*กรุณากรอกให้ตรงกัน</string>
    <string name="txt_code">กรอกรหัส OTP</string>
    <string name="txt_register_detail5">*กรอก OTP ที่ได้รับทาง SMS</string>
    <string name="txt_more_detail1">จัดเต็มทุกความบันเทิง</string>
    <string name="txt_more_detail2">สุดยอดประสบการณ์ความบันเทิง ในการรับชม ทีวี กีฬาสด กว่า 200 ช่อง คลังหนังใหญ่ที่สุด ซีรีส์จากทั่วโลก คอนเสิร์ต สารคดี หนัง VIP และรายการย้อนหลัง ในรูปแบบ VOD ( Video On Demand ) ให้เลือกรับชมแบบจุใจ</string>
    <string name="bt_topup">เติมวัน</string>
    <string name="bt_point">พอยต์</string>
    <string name="bt_lang">ภาษา</string>
    <string name="bt_table">ตารางกีฬา</string>
    <string name="bt_fav">รายการโปรด</string>
    <string name="bt_history">ประวัติ</string>
    <string name="bt_setting">ตั้งค่า</string>
    <string name="bt_logout">ลงชื่อออก</string>
    <string name="bt_topup_en">Top up</string>
    <string name="bt_point_en">Point</string>
    <string name="bt_lang_en">Language</string>
    <string name="bt_table_en">Sport Table</string>
    <string name="bt_fav_en">Favorite</string>
    <string name="bt_history_en">History</string>
    <string name="bt_setting_en">Setting</string>
    <string name="bt_logout_en">Logout</string>
    <string name="txt_all">ทั้งหมด</string>
    <string name="bt_search">ค้นหา</string>
    <string name="alert_server_error">Server Error</string>
    <string name="txt_ask_exit">Are you sure you want to exit?</string>
    <string name="bt_yes">Yes,ใช่</string>
    <string name="bt_no">No,ไม่</string>
    <string name="txt_detail_movie1">\" นาที : เข้าฉาย \"</string>
    <string name="txt_minute">" นาที"</string>
    <string name="txt_released">\" : เข้าฉาย \"</string>
    <string name="txt_topup_pay">ช่องทางการชำระเงิน</string>
    <string name="txt_choose_packet">เลือกแพ็กเกจวันใช้งาน</string>
    <string name="text_sub_topic_topup">คำแนะนำการใช้งาน :</string>
    <string name="txt_topup_detail1">"<font fgcolor='#FFFFFF'>● โปรดโอน</font><font fgcolor='#FFD100'> ตรงยอดจุดทศนิยม</font><font fgcolor='#FFFFFF'> เช่น 3,100</font><font fgcolor='#FFD100'>.10</font><font fgcolor='#FFFFFF'> บาท เพื่อให้วันเข้าระบบอัตโนมัติ</font></string>
    <string name="txt_topup_detail2"><font fgcolor='#FFFFFF'>● การสั่งซื้อ</font>
        <font fgcolor='#FFD100'>หมดอายุภายใน 5 นาที</font></string>
    <string name="txt_topup_detail3"><font fgcolor='#FFFFFF'>● ระบบอ้างอิง</font>
        <font fgcolor='#FFD100'>จุดทศนิยม</font>
        <font fgcolor='#FFFFFF'>ในการตรวจสอบยอดโอนเงิน</font></string>
    <string name="txt_contact">ติดต่อสอบถาม</string>
    <string name="txt_contact_detail1">" สอบถาม / แจ้งปัญหาได้ที่ "</string>
    <string name="txt_contact_detail2">Line : @fwpayment</string>
    <string name="txt_contact_contact">Line : @fwiptvuhd</string>
    <string name="txt_contact_detail3">" (มี @ ด้วยนะคะ)"</string>
    <string name="txt_day">%1$s วัน</string>
    <string name="txt_mont">%1$s เดือน</string>
    <string name="txt_pay_prompt">ชำระผ่านระบบพร้อมเพย์</string>
    <string name="txt_value_pay">ยอดเงินที่ต้องโอน</string>
    <string name="txt_number_prompt">เบอร์พร้อมเพย์</string>
    <string name="txt_scan_qr">สแกน QR Code</string>
    <string name="txt_expire_time">หมดอายุภายใน</string>
    <string name="bt_history_pay">ดูประวัติการการเติมเงิน</string>
    <string name="txt_success">เสร็จสิ้น</string>
    <string name="txt_thank">ขอบคุณที่ใช้บริการ</string>
    <string name="txt_back_to_home">กลับไปหน้าแรก</string>
    <string name="txt_tv_guilde">ตารางกีฬา</string>
    <string name="txt_sport">กีฬา</string>
    <string name="txt_event">รายการแข่งขัน</string>
    <string name="txt_live">สถานะ</string>
    <string name="txt_favorite">รายการโปรด</string>
    <string name="txt_history">ประวัติการรับชม</string>
    <string name="txt_select">กรุณาเลือก</string>
    <string name="txt_info">รายละเอียดการแลกพอยต์</string>
    <string name="txt_exchange_point">แลกพอยต์</string>
    <string name="txt_gift_code">Gift Code</string>
    <string name="txt_point1">คุณมีพอยต์สะสม : </string>
    <string name="txt_point2">เงื่อนไขการสะสมพอยต์: </string>
    <string name="txt_point3">" ● รับพอยต์ทุกการเติมวันผ่านระบบพร้อมเพย์"</string>
    <string name="txt_point4">"   ⭐ 25 บาท = 1 พอยต์"</string>
    <string name="txt_point5">"      ตัวอย่าง 3,100 บาท ได้รับ 124 พอยต์"</string>
    <string name="txt_point6"><font fgcolor='#FFFFFF'> ●</font><font fgcolor='#FFD100'> ไม่สามารถ</font><font fgcolor='#FFFFFF'>โอนพอยต์ต่อให้ยูสเซอร์อื่น</font></string>
    <string name="txt_point7"><font fgcolor='#FFFFFF'> ●</font><font fgcolor='#FFD100'> ไม่สามารถ</font><font fgcolor='#FFFFFF'>แลกพอยต์เป็นเงินสด</font>
    </string>
    <string name="txt_point8">" ● พอยต์สามารถแลกของรางวัลหรือวันใช้งานในช่วงเวลาที่แอปกำหนดเท่านั้น"</string>
    <string name="txt_point9">" แอปขอสงวนสิทธิ์เปลี่ยนแปลงหรือยกเลิกเงื่อนไขโดยไม่ต้องแจ้งให้ทราบล่วงหน้า"</string>
    <string name="txt_point">" พอยต์"</string>
    <string name="txt_exchange_free">"แลกฟรี "</string>
    <string name="gift_code_free">ป้อนรหัส Gift Code เพื่อแลกรับวันใช้งาน</string>
    <string name="txt_gift_code_detail1">" ● สามารถติดตามกิจกรรมในการรับ Gift code ผ่านช่องทาง <font fgcolor='#FFD100'>Line : @fwiptvuhd"</font> </string>
    <string name="hint_edit_txt_gift_code">กรุณากรอก (ไม่ต้องเว้นวรรค)</string>
    <string name="bt_accept">ตกลง</string>
    <string name="txt_change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="txt_current_password">รหัสผ่านปัจจุบัน</string>
    <string name="txt_new_password">รหัสผ่านใหม่</string>
    <string name="txt_re_new_password">ยืนยันรหัสผ่านใหม่</string>
    <string name="bt_confirm">ยืนยัน</string>
    <string name="txt_topic_vip">หมวดผู้ใช้งาน VIP+</string>
    <string name="txt_sub_vip">เหมาะสำหรับผู้ใช้งาน 18 ปีขึ้นไป</string>
    <string name="hint_extra_code">กรุณากรอกรหัสพิเศษ</string>
    <string name="txt_top_up_history">ประวัติการเติมวัน</string>
    <string name="txt_date">วันที่</string>
    <string name="txt_before_top_up">วันใช้งานก่อนเติม</string>
    <string name="txt_before_point">พอยต์ก่อนเติม</string>
    <string name="txt_day_recive">รับวันใช้งาน</string>
    <string name="txt_point_recive">ได้รับพอยต์</string>
    <string name="txt_day_left">วันใช้งานคงเหลือ</string>
    <string name="txt_point_left">พอยต์คงเหลือ</string>
    <string name="text_note">หมายเหตุ</string>
    <string name="readmore">อ่านเพิ่มเติม</string>
    <string name="receive_otp">รับรหัส OTP</string>
    <string name="clear_history">ล้างประวัติการรับชม</string>
    <string name="clear_fav">ล้างรายการโปรด</string>
    <string name="title_clear_history">คุณต้องการลบประวัติการรับชม?</string>
    <string name="title_clear_fav">คุณต้องการลบข้อมูลรายการโปรด?</string>
    <string name="text_logout">คุณต้องการออกจากระบบ \nDo you want to logout?</string>
    <string name="topup_error">เกิดข้อผิดพลาด กรุณาลองใหม่อีกครั้ง!</string>
    <string name="live">Live</string>
    <string name="watched">ดูแล้ว</string>
    <string name="alert_fav">เพิ่มช่อง %1$s ในรายการโปรดใช่หรือไม่?</string>
    <string name="alert_unfav">ลบช่อง %1$s ออกจากรายการโปรดใช่หรือไม่?</string>
    <string name="notfound">ไม่พบข้อมูล</string>
    <string name="or">หรือ</string>
    <string name="activate_line">Activate Line</string>
    <string name="activate_line_title">กรุณากรอกโค้ดด้านล่างในแอป Line</string>
    <string name="activate_line_code">กรุณากรอก Activate Line Code</string>
    <string name="detail_otp">ยืนยันรับรหัส OTP</string>
    <string name="send_otp">รับรหัส OTP</string>
    <string name="pin_code_history">ประวัติ Pin code</string>
    <string name="text_new">เริ่มต้น</string>
    <string name="text_last">ล่าสุด</string>
    <string name="text_player">เครื่องเล่น :</string>
    <string name="qr_code_activate_user_fwiptvudh">สแกน QR Code เพื่อสมัครสมาชิก\nแอดไลน์ %1$s</string>
    <string name="hot">ยอดนิยม</string>
    <string name="value">คุ้มค่า</string>
    <string name="lineadd">สแกน QR Code เพื่อ Activate User\nหรือ แอด Line : %1$s</string>
    <string name="bt_history_send">ตกลง</string>
    <string name="pay_prompt_pay">ชำระผ่านระบบพร้อมเพย์</string>
    <string name="please_contact">กรุณาติดต่อ</string>
    <string name="failed">ไม่สำเร็จ</string>
    <string name="actor">นักแสดง : </string>
    <string name="director">ผู้กำกับ : </string>
    <string name="year">ปี : </string>
    <string name="country">ประเทศ : </string>
    <string name="time">เวลา : </string>
    <string name="type">ประเภท : </string>
    <string name="rating">เรทติ้ง : </string>
    <string name="on_air">เข้าฉาย : </string>
    <string name="point">พอยต์</string>
    <string name="top_up_history">ประวัติการเติมวัน</string>
    <string name="line_fwpayment">Line : @fwpayment (มี @)</string>
    <string name="note">หมายเหตุ :</string>
    <string name="soundtrack">พากย์ไทย</string>
    <string name="subtitle">บรรยายไทย</string>
    <string name="menu_main_setting">ตั้งค่าเมนูหลัก</string>
    <string name="main_menu_settings">ตั้งค่าเมนูหลัก</string>
    <string name="row_1">แถว 1</string>
    <string name="row_2">แถว 2</string>
    <string name="row_3">แถว 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Recommended">รายการแนะนำ</string>
    <string name="back">กลับ</string>
    <string name="live_player">เครื่องเล่นทีวี</string>
    <string name="Choose_player">เลือกเครื่องเล่น</string>
    <string name="point_history">ประวัติพอยต์</string>
    <string name="promotion">โปรโมชัน</string>

</resources>