<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tool.point.PointMainFragment"
    >

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_point1"
                android:textColor="@color/white"
                android:textSize="@dimen/detail_main_text_size"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/orange_main"
                android:textSize="@dimen/detail_main_text_size" />
        </LinearLayout>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/text_detail_point_margin"
            android:text="@string/txt_point2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sub_condition_point" />

        <TextView
            android:layout_marginTop="@dimen/text_detail_point_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_point3"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sub_condition_point"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_marginTop="@dimen/text_detail_point_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_point4"
            android:textColor="@color/orange_main"
            android:textSize="@dimen/text_sub_condition_point" />

        <TextView
            android:layout_marginTop="@dimen/text_detail_point_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_point5"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sub_condition_point" />

            <TextView
                android:layout_marginTop="@dimen/text_detail_point_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_point6"
                android:textColor="@color/white"
                android:textSize="@dimen/text_sub_condition_point" />


        <TextView
            android:layout_marginTop="@dimen/text_detail_point_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_point7"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sub_condition_point" />

        <TextView
            android:layout_marginTop="@dimen/text_detail_point_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_point8"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sub_condition_point" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp"
            android:gravity="bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@color/orange_main"
                android:gravity="bottom"
                android:textSize="@dimen/text_sub_condition_point" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_point9"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:textSize="@dimen/text_sub_condition_point" />
        </LinearLayout>



    </LinearLayout>

</FrameLayout>