<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tool.topup.SuccessActivity"
    android:background="@color/black"
    android:padding="20dp"
    android:keepScreenOn="true"
    >

    <include
        android:id="@+id/logo"
        layout="@layout/layout_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/high_logo"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_white_transparent_20_corner"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/type_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_success"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/green_success"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/ic_check"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_thank"
            android:textColor="@color/orange_main"
            />

        <LinearLayout
            android:id="@+id/bt_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/bt_select_style_5"
            >

            <TextView
                android:id="@+id/text_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_back_to_home"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                />
        </LinearLayout>


    </LinearLayout>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_topic_textview"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/txt_contact"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txt_contact_detail1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contact_detail2"
        android:textColor="@color/orange_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contact_detail3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>