<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_prompt_pay"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_success"
        android:textColor="@color/green_success"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/ic_check"
        android:adjustViewBounds="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_thank"
        android:textColor="@color/white"
        />

</LinearLayout>