<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black_transparent2"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:background="@drawable/bg_grey_coner_20"
        android:padding="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_prompt_pay"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/text_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/failed"
            android:textColor="@color/orange_main"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:background="@drawable/bg_white_coner_10"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/qr_payment"
                />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/please_contact"
            android:textSize="18sp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_fwpayment"
            android:textColor="@color/orange_main"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:id="@+id/bt_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/bg_black_orange_border_corner_20"
            >

            <TextView
                android:id="@+id/text_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_back_to_home"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </LinearLayout>



    </LinearLayout>


</LinearLayout>